microsoft-edge/devtools-protocol/0.1/clients.md
---
description: La version 0,1 du protocole Microsoft Edge DevTools prend en charge les clients d’outils suivants.
title: Clients de la version 0,1 du protocole DevTools (EdgeHTML)
author: MSEdgeTeam
ms.author: msedgedevrel
ms.date: 07/16/2020
ms.topic: reference
ms.prod: microsoft-edge
ms.custom: seodec18
ms.openlocfilehash: 5fdf375634bb63c944b3fe09d1c0cbd5a935dcd7
ms.sourcegitcommit: a06c86ef7c69e1e400a0be5938449f3c4ba6ec72
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 07/16/2020
ms.locfileid: "10882764"
---
# <span data-ttu-id="db4f9-103">Clients de la version 0,1 du protocole DevTools (EdgeHTML)</span><span class="sxs-lookup"><span data-stu-id="db4f9-103">DevTools Protocol Version 0.1 Clients (EdgeHTML)</span></span>  

> [!NOTE]
> <span data-ttu-id="db4f9-104">Le protocole Microsoft Edge DevTools fonctionne uniquement sur les [mises à jour de Windows 10 d’avril 2018](https://blogs.windows.com/windowsexperience/2018/04/30/how-to-get-the-windows-10-april-2018-update/#5VXkQMU41CJzZPER.97) et les versions ultérieures de [Windows Insider Preview](https://insider.windows.com/en-us/getting-started/) .</span><span class="sxs-lookup"><span data-stu-id="db4f9-104">The Microsoft Edge DevTools Protocol works only on [Windows 10 April 2018 Update](https://blogs.windows.com/windowsexperience/2018/04/30/how-to-get-the-windows-10-april-2018-update/#5VXkQMU41CJzZPER.97) and later [Windows Insider Preview](https://insider.windows.com/en-us/getting-started/) builds.</span></span>

<span data-ttu-id="db4f9-105">**Devtools protocole 0,1** prend en charge les clients d’outils suivants.</span><span class="sxs-lookup"><span data-stu-id="db4f9-105">**DevTools Protocol 0.1** supports the following tooling clients.</span></span>

<span data-ttu-id="db4f9-106">[ ![ Microsoft Edge devtools Preview](../media/microsoft-edge-devtools.png)](#microsoft-edge-devtools-preview) [ ![ Microsoft Visual Studio 15,7 Preview 2](../media/visual-studio-2017.png)](#microsoft-visual-studio-preview)</span><span class="sxs-lookup"><span data-stu-id="db4f9-106">[![Microsoft Edge DevTools Preview](../media/microsoft-edge-devtools.png)](#microsoft-edge-devtools-preview) [![Microsoft Visual Studio 15.7 Preview 2](../media/visual-studio-2017.png)](#microsoft-visual-studio-preview)</span></span>

## <span data-ttu-id="db4f9-107">Aperçu de DevTools Microsoft Edge</span><span class="sxs-lookup"><span data-stu-id="db4f9-107">Microsoft Edge DevTools Preview</span></span>

<span data-ttu-id="db4f9-108">Vous pouvez utiliser l’application Windows 10 [**devtools Preview**](https://www.microsoft.com/store/p/microsoft-edge-devtools-preview/9mzbfrmz0mnj?activetab=pivot%3aoverviewtab) autonome à partir du Microsoft Store pour déboguer à distance un appareil hôte exécutant Microsoft Edge ([EdgeHTML 17](../../dev-guide.md) ou version ultérieure).</span><span class="sxs-lookup"><span data-stu-id="db4f9-108">You can use the standalone [**Microsoft Edge DevTools Preview**](https://www.microsoft.com/store/p/microsoft-edge-devtools-preview/9mzbfrmz0mnj?activetab=pivot%3aoverviewtab) Windows 10 app from the Microsoft Store to remotely debug a host device running Microsoft Edge ([EdgeHTML 17](../../dev-guide.md) or later).</span></span>

<span data-ttu-id="db4f9-109">La version 0,1 de la version préliminaire du protocole DevTools fournit une fonctionnalité de débogage de base, comme la définition de points d’arrêt, l’exécution du code et l’exploration de traces de pile.</span><span class="sxs-lookup"><span data-stu-id="db4f9-109">This preliminary Version 0.1 release of the DevTools Protocol provides core debugging functionality, such as setting breakpoints, stepping through code, and exploring stack traces.</span></span> <span data-ttu-id="db4f9-110">Dans l’interface utilisateur de DevTools Edge, cela se traduit par une fonctionnalité disponible dans le volet [**débogueur**](../../devtools-guide/debugger.md) , l’inspection du cache (pour le stockage Web, le travailleur de service, l’API de cache et IndexedDB).</span><span class="sxs-lookup"><span data-stu-id="db4f9-110">In the Edge DevTools UI, this translates to functionality available in the [**Debugger**](../../devtools-guide/debugger.md) panel, minus cache inspection (for Web storage, Service worker, Cache API, and IndexedDB).</span></span> <span data-ttu-id="db4f9-111">Pour le moment, le débogage à distance Microsoft Edge est limité aux hôtes de bureau, avec la prise en charge d’autres appareils Windows 10 présents dans les versions ultérieures.</span><span class="sxs-lookup"><span data-stu-id="db4f9-111">Currently Microsoft Edge remote debugging is limited to desktop hosts, with support for other Windows 10 devices coming in future releases.</span></span>

<span data-ttu-id="db4f9-112">Voici comment configurer le débogage à distance à l’aide de l’application Microsoft Edge DevTools preview.</span><span class="sxs-lookup"><span data-stu-id="db4f9-112">Here's how to set up remote debugging with the Microsoft Edge DevTools Preview app.</span></span> <span data-ttu-id="db4f9-113">Le protocole DevTools est dans Preview et nécessite [Windows 10 avril 2018 Update](https://blogs.windows.com/windowsexperience/2018/04/30/how-to-get-the-windows-10-april-2018-update/#5VXkQMU41CJzZPER.97) ou une version ultérieure de Windows Insider Preview sur l’ordinateur hôte (débogueur).</span><span class="sxs-lookup"><span data-stu-id="db4f9-113">The DevTools Protocol is in preview and requires [Windows 10 April 2018 Update](https://blogs.windows.com/windowsexperience/2018/04/30/how-to-get-the-windows-10-april-2018-update/#5VXkQMU41CJzZPER.97) or a later Windows Insider Preview build on the host (debugee) machine.</span></span> <span data-ttu-id="db4f9-114">L’application Edge DevTools Preview (utilisée sur la machine de débogueur) sera exécutée sur les versions de l’automne Creators Update (version 1709) et de Windows Insider preview.</span><span class="sxs-lookup"><span data-stu-id="db4f9-114">The Edge DevTools Preview app (used on the debugger machine) will run on Fall Creators Update (version 1709) and Windows Insider Preview builds.</span></span>

**<span data-ttu-id="db4f9-115">Sur l’ordinateur hôte (débogueur)...</span><span class="sxs-lookup"><span data-stu-id="db4f9-115">On the host (debugee) machine...</span></span>**

1. <span data-ttu-id="db4f9-116">Si vous utilisez un réseau WiFi, assurez-vous que le réseau est marqué comme **domaine** ou **privé**.</span><span class="sxs-lookup"><span data-stu-id="db4f9-116">If you're on a WiFi network, ensure the network is marked as either **Domain** or **Private**.</span></span> <span data-ttu-id="db4f9-117">Pour ce faire, ouvrez l’application [**Centre de sécurité Windows Defender**](/windows/security/threat-protection/windows-defender-security-center/windows-defender-security-center) , cliquez sur **pare-feu & protection du réseau** et vérifiez si votre réseau figure en tant que réseau de *domaine* ou *réseau privé*.</span><span class="sxs-lookup"><span data-stu-id="db4f9-117">You can verify this by opening the [**Windows Defender Security Center**](/windows/security/threat-protection/windows-defender-security-center/windows-defender-security-center) app, clicking on **Firewall & network protection** and checking if your network is listed as a *Domain network* or *Private network*.</span></span> 

    <span data-ttu-id="db4f9-118">S’il est répertorié comme étant *public*, accédez à **réglages**  >  **Network & Internet**  >  **Wi-Fi**, cliquez sur votre réseau et activez le bouton *Network Network (réseau* **privé**).</span><span class="sxs-lookup"><span data-stu-id="db4f9-118">If its listed as *Public*, go to **Settings** > **Network & Internet** > **Wi-Fi**, click on your network and toggle the *Network profile* button to **Private**.</span></span>

2. <span data-ttu-id="db4f9-119">Ouvrez le panneau **de configuration pour les développeurs** dans les *paramètres* Windows (recherchez *développeur* et cliquez sur utiliser les *fonctionnalités de développement*) et:</span><span class="sxs-lookup"><span data-stu-id="db4f9-119">Open the **For developers** control panel in Windows *Settings* (search for *developer* and click on *Use developer features*), and:</span></span> 

    <span data-ttu-id="db4f9-120">a.</span><span class="sxs-lookup"><span data-stu-id="db4f9-120">a.</span></span> <span data-ttu-id="db4f9-121">Activez le **mode développeur**.</span><span class="sxs-lookup"><span data-stu-id="db4f9-121">Toggle on **Developer Mode**.</span></span> <span data-ttu-id="db4f9-122">Le package *mode développeur* s’installe, ce qui permet d’activer les outils de contrôle à distance pour le bureau.</span><span class="sxs-lookup"><span data-stu-id="db4f9-122">This will install the *Developer Mode* package, enabling remote tooling for desktop.</span></span>

    <span data-ttu-id="db4f9-123">b.</span><span class="sxs-lookup"><span data-stu-id="db4f9-123">b.</span></span> <span data-ttu-id="db4f9-124">Activez [**Device Portal**](/windows/uwp/debug-test-perf/device-portal) (*activez les diagnostics à distance sur connexions au réseau local*) et la **découverte d’appareils** (*rendez votre appareil visible pour les connexions USB et votre réseau local*).</span><span class="sxs-lookup"><span data-stu-id="db4f9-124">Enable [**Device Portal**](/windows/uwp/debug-test-perf/device-portal) (*Turn on remote diagnostics over local area network connections*) and **Device discovery** (*Make your device visible to USB connections and your local network*).</span></span>

    <span data-ttu-id="db4f9-125">c.</span><span class="sxs-lookup"><span data-stu-id="db4f9-125">c.</span></span> <span data-ttu-id="db4f9-126">Activez **l’authentification** et attribuez un nom d’utilisateur/mot de passe.</span><span class="sxs-lookup"><span data-stu-id="db4f9-126">Turn on **Authentication** and supply a username / password.</span></span>

    <span data-ttu-id="db4f9-127">d.</span><span class="sxs-lookup"><span data-stu-id="db4f9-127">d.</span></span> <span data-ttu-id="db4f9-128">Notez l’adresse IP et le port de connexion de l’ordinateur (50443) affichés.</span><span class="sxs-lookup"><span data-stu-id="db4f9-128">Note the machine IP address and connection port (50443) displayed.</span></span>

3. <span data-ttu-id="db4f9-129">Ouvrez les onglets dans Microsoft Edge que vous souhaitez déboguer de l’ordinateur client.</span><span class="sxs-lookup"><span data-stu-id="db4f9-129">Open tabs in Microsoft Edge that you wish to debug from the client machine.</span></span>

**<span data-ttu-id="db4f9-130">Sur l’ordinateur client (débogueur)...</span><span class="sxs-lookup"><span data-stu-id="db4f9-130">On the client (debugger) machine...</span></span>**

1.  <span data-ttu-id="db4f9-131">Installez et lancez l’application [Microsoft Edge devtools Preview](https://www.microsoft.com/store/p/microsoft-edge-devtools-preview/9mzbfrmz0mnj?activetab=pivot%3aoverviewtab) autonome à partir du Microsoft Store.</span><span class="sxs-lookup"><span data-stu-id="db4f9-131">Install and launch the standalone [Microsoft Edge DevTools Preview](https://www.microsoft.com/store/p/microsoft-edge-devtools-preview/9mzbfrmz0mnj?activetab=pivot%3aoverviewtab) app from the Microsoft Store.</span></span>

2. <span data-ttu-id="db4f9-132">Ouvrez le panneau **distant** et entrez l’emplacement réseau (URL et port) de l’ordinateur hôte, puis cliquez sur **se connecter**.</span><span class="sxs-lookup"><span data-stu-id="db4f9-132">Open the **Remote** panel and enter the network location (URL and port) of the host machine and click **Connect**.</span></span>

3. <span data-ttu-id="db4f9-133">**Installez** le certificat de l’ordinateur hôte à partir de la boîte de dialogue *certificat non approuvé* qui s’affiche.</span><span class="sxs-lookup"><span data-stu-id="db4f9-133">**Install** the host machine's certificate from the *Untrusted Certificate* dialog that appears.</span></span>

4. <span data-ttu-id="db4f9-134">Fournissez le nom d’utilisateur/mot de passe que vous avez désigné pour l’authentification Device Portal.</span><span class="sxs-lookup"><span data-stu-id="db4f9-134">Supply the username/password you designated for Device Portal authentication.</span></span>

5. <span data-ttu-id="db4f9-135">Le panneau *distant* charge une liste de cibles de pages débogageées sur l’ordinateur hôte.</span><span class="sxs-lookup"><span data-stu-id="db4f9-135">The *Remote* panel will load a list of debuggable page targets on the host machine.</span></span> <span data-ttu-id="db4f9-136">Sélectionnez-en un pour démarrer le débogage.</span><span class="sxs-lookup"><span data-stu-id="db4f9-136">Select one to start debugging.</span></span>

6. <span data-ttu-id="db4f9-137">Utilisez le bouton **Actualiser** pour mettre à jour et rechargez la liste des cibles de pages distantes sur l’ordinateur hôte.</span><span class="sxs-lookup"><span data-stu-id="db4f9-137">Use the **Refresh** button to update and reload the list of remote page targets on the host machine.</span></span> <span data-ttu-id="db4f9-138">Cliquez sur le bouton **déconnecter** pour revenir à l’écran *se connecter à un appareil distant* et le joindre à un autre hôte.</span><span class="sxs-lookup"><span data-stu-id="db4f9-138">Click the **Disconnect** button to return to the *Connect to a remote device* screen and attach to a different host.</span></span>

## <span data-ttu-id="db4f9-139">Microsoft Visual Studio preview</span><span class="sxs-lookup"><span data-stu-id="db4f9-139">Microsoft Visual Studio Preview</span></span>

<span data-ttu-id="db4f9-140">À l’aide de la version la plus récente de [**Visual Studio Preview**](https://www.visualstudio.com/vs/preview/) (visual studio 15,7 Preview 1 ou version ultérieure), vous pouvez lancer et déboguer Microsoft Edge à partir de l’environnement de développement intégré (IDE) sur n’importe quel projet ASP.net ou .net principal.</span><span class="sxs-lookup"><span data-stu-id="db4f9-140">Using the latest [**Visual Studio Preview**](https://www.visualstudio.com/vs/preview/) build (Visual Studio 15.7 Preview 1 or later), you can launch and debug Microsoft Edge from the IDE on any ASP.NET or .NET Core project.</span></span> <span data-ttu-id="db4f9-141">Le protocole DevTools est actuellement en version préliminaire et nécessite l’exécution d’une build [Windows Insider Preview](https://insider.windows.com/en-us/getting-started/) .</span><span class="sxs-lookup"><span data-stu-id="db4f9-141">The DevTools Protocol is currently in preview and requires you to be running a [Windows Insider Preview](https://insider.windows.com/en-us/getting-started/) build.</span></span>

<span data-ttu-id="db4f9-142">Voici comment configurer le débogage Microsoft Edge avec Visual Studio:</span><span class="sxs-lookup"><span data-stu-id="db4f9-142">Here's how to set up Microsoft Edge debugging with Visual Studio:</span></span>

1.  <span data-ttu-id="db4f9-143">Installez et lancez la dernière version de [**Visual Studio Preview**](https://www.visualstudio.com/vs/preview/) (visual studio 15,7 Preview 1 ou version ultérieure).</span><span class="sxs-lookup"><span data-stu-id="db4f9-143">Install and launch the latest [**Visual Studio Preview**](https://www.visualstudio.com/vs/preview/) build (Visual Studio 15.7 Preview 1 or later).</span></span>

2. <span data-ttu-id="db4f9-144">Ouvrez un projet ASP.NET ou .NET principal existant, ou **créez un nouveau projet...** à l’aide de l’un des modèles **Visual C#** .net.</span><span class="sxs-lookup"><span data-stu-id="db4f9-144">Open an existing ASP.NET or .NET Core project or **Create new project...** using one of the **Visual C#** .NET templates.</span></span>

3. <span data-ttu-id="db4f9-145">Dans l' **Explorateur de solutions**du projet, ouvrez les fichiers JavaScript dont vous souhaitez déboguer et définir des points d’arrêt dans l’environnement de développement, comme vous le feriez avec du code côté serveur.</span><span class="sxs-lookup"><span data-stu-id="db4f9-145">In the project **Solution Explorer**, open the JavaScript files you wish to debug and set breakpoints within the IDE just as you would with server-side code.</span></span>

4. <span data-ttu-id="db4f9-146">Appuyez sur `F5` pour lancer Microsoft Edge exécutant le serveur devtools.</span><span class="sxs-lookup"><span data-stu-id="db4f9-146">Press `F5` to launch Microsoft Edge running the DevTools Server.</span></span> <span data-ttu-id="db4f9-147">Lorsque le point d’arrêt est atteint, vous êtes interrompu dans Visual Studio, vous pouvez le consulter et parcourir le code à partir de cet emplacement.</span><span class="sxs-lookup"><span data-stu-id="db4f9-147">When a breakpoint is hit, you'll break into Visual Studio and can further inspect and step through the code from there.</span></span>
